2009-09-11  Stefan Monnier  <monnier@iro.umontreal.ca>

	* keymap.c (where_is_internal): Don't erroneously return nil right after
	filling the cache.
	(where_is_internal_1): Fix up typo.

2009-09-11  Glenn Morris  <rgm@gnu.org>

	* frame.c (Fx_parse_geometry): Unify the X and NS versions so that they
	share a common doc-string.

2009-09-11  Stefan Monnier  <monnier@iro.umontreal.ca>

	* keymap.c (get_keymap): Return the actual keymap symbol rather than
	t for autoloaded keymaps when autoloading is not allowed (bug#4393).

	* keymap.c (QCadvertised_binding): New constant.
	(syms_of_keymap): Initialize it.
	(Fwhere_is_internal): Try and use bindings from :advertised-binding
	if applicable.

2009-09-10  Stefan Monnier  <monnier@iro.umontreal.ca>

	* keyboard.c (Qmenu_alias, Vdefine_key_rebound_commands): Remove.
	(parse_menu_item): Streamline since bindings are recomputed all the
	time anyway.  Don't bother checking Vdefine_key_rebound_commands any
	more and don't support lmenu's menu-alias any more either.

	* keymap.c (where_is_internal_data): Make noindirect a boolean.
	(where_is_internal): Strip it down to only traverse the keymaps.
	Move the cache handling from Fwhere_is_internal to here.
	(Fwhere_is_internal): Move the handling of remapping and the choice of
	the best binding from where_is_internal to here.
	Unify the cached/noncached paths, so remapping is also handled
	correctly when the cache is used, and so the cache can be used to
	speed up remap-handling when applicable.
	Give preference to non-remapped bindings.
	* doc.c (Fsubstitute_command_keys): Let Fwhere_is_internal's prefer
	non-remapped bindings.
	* keyboard.c (parse_menu_item): Let Fwhere_is_internal handle
	command remapping.

	* xdisp.c (display_mode_element): Move list length limit from 50 to
	5000 (see thread starting with <xbaik5174uqu.fsf@cam.ac.uk>).

2009-09-09  Adrian Robert  <Adrian.B.Robert@gmail.com>

	* nsfont.m (ns_get_family): Don't force first letter to uppercase.
