@@ -1,3 +1,7 @@
+2009-09-11  Andreas Schwab  <schwab@linux-m68k.org>
+
+	* xdisp.c (display_mode_element): Detect cycles.
+
 2009-09-11  Stefan Monnier  <monnier@iro.umontreal.ca>
 
 	* keymap.c (where_is_internal): Don't erroneously return nil right after
